add sidemenu component (with dummy data) - push the map and top component when the hamburger icon is clicked - disappear when the hamburger icon is clicked again (toggle) - appear/disappear functions are defined in SideMenu component, so the event handlers are passed down to the Top component to trigger

--- a/app/src/Top.css
+++ b/app/src/Top.css
@@ -1,7 +1,9 @@
-.top-bar {
+#top-bar {
   padding-left: 10px;
   padding-top: 10px;
 
   height: 50px;
   background-color: gray;
+
+  transition: margin-left .5s;
 }
