change map center based on map search box result - removing may type control by (mapTypeControl: false) in defaultOptions - adding reference points to the map and searchbox component   - pass the functions to take the reference of them in props from the parent component   - should be binded with `this` - detecting when a place is selected from the searchbox   - when selected, move the center of the map

--- a/app/src/Map.css
+++ b/app/src/Map.css
@@ -11,3 +11,29 @@
   height: 100%;
   width: 100%;
 }
+
+.map-builtin-search-box {
+  box-sizing: border-box;
+  border: 1px solid transparent;
+  width: 240px;
+  height: 32px;
+  margin-top: 15px;
+  margin-left: 15px;
+  padding: 0 12px;
+  border-radius: 3px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+  font-size: 14px;
+  outline: none;
+  text-overflow: ellipsis;
+  /*boxSizing:
+  border: `1px solid transparent`,
+  width: `240px`,
+  height: `32px`,
+  marginTop: `27px`,
+  padding: `0 12px`,
+  borderRadius: `3px`,
+  boxShadow: `0 2px 6px rgba(0, 0, 0, 0.3)`,
+  fontSize: `14px`,
+  outline: `none`,
+  textOverflow: `ellipses`*/
+}
