--- a/app/src/Map.css
+++ b/app/src/Map.css
@@ -1,10 +1,11 @@
 #map {
-  position: fixed;
+  position: absolute;
   height: 95%;
   width: 100%;
   left: 0%;
 
-  transition: margin-left .5s;
+  transition: margin-left .5s, transforms 0s;
+
 }
 
 .map-container {
@@ -25,17 +26,6 @@
   font-size: 14px;
   outline: none;
   text-overflow: ellipsis;
-  /*boxSizing:
-  border: `1px solid transparent`,
-  width: `240px`,
-  height: `32px`,
-  marginTop: `27px`,
-  padding: `0 12px`,
-  borderRadius: `3px`,
-  boxShadow: `0 2px 6px rgba(0, 0, 0, 0.3)`,
-  fontSize: `14px`,
-  outline: `none`,
-  textOverflow: `ellipses`*/
 }
 
 .info-div {
