--- a/app/src/SideMenu.css
+++ b/app/src/SideMenu.css
@@ -2,10 +2,10 @@
     height: 100%;
     width: 0;
     position: fixed;
-    z-index: 1;
+    z-index: 100;
     top: 0;
     left: 0;
-    background-color: #111;
+    background-color: rgba(0, 0, 0, 0.72);
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
