--- a/app/src/SideMenu.css
+++ b/app/src/SideMenu.css
@@ -43,9 +43,19 @@
   height: 30px;
 }
 
+.place-list {
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-top: 10px;
+
+  border-style: solid;
+  border-width: 1px;
+  border-color: white;
+  border-radius: 5px;
+}
+
 .place-list div {
   color: white;
-  margin: 10px;
 }
 
 .place-list div:hover {
@@ -55,6 +65,15 @@
 .filter {
   padding-left: 10px;
   padding-right: 10px;
+  padding-bottom: 10px;
+
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-top: 10px;
+
+  border-style: solid;
+  border-color: white;
+  border-radius: 10px;
 }
 
 .filter input[type=range] {
@@ -63,4 +82,12 @@
 
 .filter p {
   color: white;
+}
+
+.filter-title {
+  font-size: 20pt;
+  border-bottom-color: white;
+  border-bottom-style: solid;
+  border-bottom-width: 4px;
+  padding-bottom: 5px;
 }
