--- a/app/src/Top.css
+++ b/app/src/Top.css
@@ -1,9 +1,19 @@
 #top-bar {
   padding-left: 10px;
-  padding-top: 10px;
+  padding-top: 20px;
 
   height: 50px;
-  background-color: gray;
+  background-color: rgb(214, 214, 214);
 
   transition: margin-left .5s;
+}
+
+.top-title {
+  float: right;
+  width: calc(100% - 60px);
+  margin-right: 30px;
+  text-align: center;
+
+  font-size: 23pt;
+  font-weight: bold;
 }
