--- a/app/src/SideMenu.css
+++ b/app/src/SideMenu.css
@@ -23,11 +23,6 @@
     color: #f1f1f1;
 }
 
-@media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
-}
-
 .place-list {
   margin-left: 10px;
   margin-right: 10px;
@@ -122,4 +117,11 @@
   font-size: 10pt;
   padding-top: 15px;
   margin-left: 10px;
+}
+
+@media only screen and (max-width : 768px) {
+  .sidenav {
+    top: 70px;
+    position: absolute;
+  }
 }
