fix the issue the size of map and side-menu component don't fit the window size for mobile view.

--- a/app/src/Map.css
+++ b/app/src/Map.css
@@ -72,3 +72,9 @@
 .info-body-address-number {
   font-size: 8pt;
 }
+
+@media only screen and (max-width : 768px) {
+  #map {
+    height: calc(100% - 70px);
+  }
+}
