--- a/app/src/Map/SearchBox.css
+++ b/app/src/Map/SearchBox.css
@@ -1,13 +1,22 @@
-.search-box, .venue-search-box {
+label {
   z-index: 99;
   position: fixed;
 
+  margin-top: 15px;
+  margin-left: 15px;
+
+  font-size: 14pt;
+  font-weight: bold;
+}
+
+.search-box, .venue-search-box {
+  margin-top: 5px;
+
+  display: block;
   box-sizing: border-box;
   border: 1px solid transparent;
   width: 240px;
   height: 32px;
-  margin-top: 15px;
-  margin-left: 15px;
   padding: 0 12px;
   border-radius: 3px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
@@ -18,8 +27,8 @@
   transition: margin-left .3s;
 }
 
-.venue-search-box {
-  margin-left: 300px;
+.venue-search-label {
+  margin-top: 100px;
 }
 
 @media only screen and (max-width : 768px) {
